changes made in lab1

--- a/WTA/LAB1/base.html
+++ b/WTA/LAB1/base.html
@@ -8,10 +8,21 @@
 </head>
 
 <body>
-	<strong><div class="main-title">DUBAI TOURISM</div></strong>
-	<div class="pan"><img src="pana.jpg"> <div class="overlay">PLAN THE ULTIMATE DUBAI GETAWAY </div> </div>
-	<h3> Destination Dubai </h3>
 
-	<p>World-class shopping, dining and entertainment attractions, beautiful beaches, mysterious deserts and culturally-rich heritage sites – Dubai is a must-see holiday destination, with something for everyone. From shopping enthusiasts and adventure-seekers to foodies and families, this bustling city has an eclectic mix of activities and places to suit all tastes. Whether you're looking to embark on a gourmet holiday or a sightseeing trip, explore our action-packed travel itineraries to get the best out of your Dubai visit. </p>
+	<ul>
+  	<li><a href="base.html">Home</a></li>
+ 	<li><a href="contact.asp">Contact</a></li>
+  	<li><a href="about.asp">About</a></li>
+	</ul> 
+
+	<strong><div class="main-title">DUBAI TOURISM</div></strong>
+
+	<div class="pan"><img src="pana.jpg"> <div class="overlay">PLAN THE ULTIMATE DUBAI GETAWAY </div> </div>
+	<h3 style="padding-left: 10px"> Destination Dubai </h3>
+
+	<p style="padding-left: 10px">World-class shopping, dining and entertainment attractions, beautiful beaches, mysterious deserts and culturally-rich heritage sites – Dubai is a must-see holiday destination, with something for everyone. From shopping enthusiasts and adventure-seekers to foodies and families, this bustling city has an eclectic mix of activities and places to suit all tastes. Whether you're looking to embark on a gourmet holiday or a sightseeing trip, explore our action-packed travel itineraries to get the best out of your Dubai visit. </p>
+
+	<h3 style="padding-left: 10px"> The Overview </h3>
+	<p style="padding-left: 10px"> Dubai is alchemy of profound traditions and a futuristic vision. The vivacious city is perched on the Gulf coastline and is the most cosmopolitan and modern destination in the Middle East. Dubai is admired for the high rise buildings and palm shaped islands. Dubai fearlessly adapts to every sci fi concept and keeps getting grand. The tiny powerhouse is high on energy, optimism and acceptance of people from across the globe. The locals are welcoming and very friendly. Dubai is constantly in flux and it gives a sneak peak into what the future holds. It represents different cultures and diversity in the form of fashion, culinary landscape, music and performance. </p>
 </body>
 </html>
