changes made in lab1 again

--- a/WTA/LAB1/base.html
+++ b/WTA/LAB1/base.html
@@ -14,15 +14,30 @@
  	<li><a href="contact.asp">Contact</a></li>
   	<li><a href="about.asp">About</a></li>
 	</ul> 
-
+	<a name="top"></a>
 	<strong><div class="main-title">DUBAI TOURISM</div></strong>
 
 	<div class="pan"><img src="pana.jpg"> <div class="overlay">PLAN THE ULTIMATE DUBAI GETAWAY </div> </div>
-	<h3 style="padding-left: 10px"> Destination Dubai </h3>
+	<div style="padding-left: 10px">
+	<h3> Destination Dubai </h3>
 
-	<p style="padding-left: 10px">World-class shopping, dining and entertainment attractions, beautiful beaches, mysterious deserts and culturally-rich heritage sites – Dubai is a must-see holiday destination, with something for everyone. From shopping enthusiasts and adventure-seekers to foodies and families, this bustling city has an eclectic mix of activities and places to suit all tastes. Whether you're looking to embark on a gourmet holiday or a sightseeing trip, explore our action-packed travel itineraries to get the best out of your Dubai visit. </p>
+	<p>World-class shopping, dining and entertainment attractions, beautiful beaches, mysterious deserts and culturally-rich heritage sites – Dubai is a must-see holiday destination, with something for everyone. From shopping enthusiasts and adventure-seekers to foodies and families, this bustling city has an eclectic mix of activities and places to suit all tastes. Whether you're looking to embark on a gourmet holiday or a sightseeing trip, explore our action-packed travel itineraries to get the best out of your Dubai visit. </p>
 
-	<h3 style="padding-left: 10px"> The Overview </h3>
-	<p style="padding-left: 10px"> Dubai is alchemy of profound traditions and a futuristic vision. The vivacious city is perched on the Gulf coastline and is the most cosmopolitan and modern destination in the Middle East. Dubai is admired for the high rise buildings and palm shaped islands. Dubai fearlessly adapts to every sci fi concept and keeps getting grand. The tiny powerhouse is high on energy, optimism and acceptance of people from across the globe. The locals are welcoming and very friendly. Dubai is constantly in flux and it gives a sneak peak into what the future holds. It represents different cultures and diversity in the form of fashion, culinary landscape, music and performance. </p>
+	<h3> The Overview </h3>
+	<p> Dubai is alchemy of profound traditions and a futuristic vision. The vivacious city is perched on the Gulf coastline and is the most cosmopolitan and modern destination in the Middle East. Dubai is admired for the high rise buildings and palm shaped islands. Dubai fearlessly adapts to every sci fi concept and keeps getting grand. The tiny powerhouse is high on energy, optimism and acceptance of people from across the globe. The locals are welcoming and very friendly. Dubai is constantly in flux and it gives a sneak peak into what the future holds. It represents different cultures and diversity in the form of fashion, culinary landscape, music and performance. </p>
+
+	<p> In Dubai, everything is possible! Dubai is writing its own story with the swanky sky high and the numerous entertainment options. It has become a hot destination for holidays with family and tourists from every part of the world are headed to Dubai. With world class shopping and adventures that could give you an adrenaline rush, Dubai has it all. It has some of the largest theme parks and malls, which will keep you busy through the day. The nightlife of Dubai is equally vibrant with various options for you to choose from. Dubai’s claim to fame was the vibrant night life and has much to offer at the popular clubs and bars. With renowned artists performing at the clubs, the crowd consists of party goers and is packed on Thursday and Friday nights.
+	</p>
+
+
+	<p>It is easy to reach Dubai with the various flights plying on a daily basis. Dubai International Airport has a good connectivity with 7,000 weekly flights across the globe. It is easy to choose accommodation options based on your budget. There are various budget friendly hotels as well as premium hotels across Dubai. No trip to Dubai is complete without its cuisine. Dubai is a mix of culture and cuisines, which is an opportunity to discover some exciting and unparalleled dining options. Catering to extravagant tastes, Dubai offers a variety of dishes to make your choice from.</p>
+
+	<p>Dubai offers various sightseeing and shopping options for every traveler. With year round sun and a combination of the desert and the beach, Dubai will sweep you off with the mesmerizing views. There are various adventure activities to be a part of. Desert Safari is a famous activity most tourists indulge in. Skydiving is also highly preferred among the tourists. Who doesn’t want to soar like a bird over this iconic city? Beginners as well as experienced skydivers love the drop here. There is also a range of sailing and water sports options for adventure lovers. You can hit the waves and enjoy the adrenaline rush.</p>
+
+	<p>The Dubai Shopping Festival is awaited by shopaholics across the World. The festival is a paradise for shoppers, food fiesta for foodies and a horizon for art lovers. The festival brings in tourists from across the globe to their favorite destination.</p>
+	</div>
+	<a href="#top">Back to top</a>
+
+
 </body>
 </html>
